--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Organic-Food-Store/ofs-nodejs-express-server#readme",
   "dependencies": {
-    "express": "^4.15.0"
+    "express": "^4.15.0",
+    "firebase-admin": "^4.1.2"
   }
 }
