--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "ofs-nodejs-express-server",
-  "description": "A node.js express server for OFS",
-  "repository": "https://github.com/Organic-Food-Store/ofs-nodejs-express-server",
-  "logo": "https://organic-food-store.herokuapp.com/node.svg",
+  "name": "Start on Heroku: Node.js",
+  "description": "A barebones Node.js app using Express 4",
+  "repository": "https://github.com/heroku/node-js-getting-started",
+  "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static"],
   "image": "heroku/nodejs"
 }
